@@ -18,6 +18,7 @@
 
 using System;
 using System.ComponentModel.Design;
+using System.Threading;
 
 using KGySoft.Drawing.ImagingTools.View;
 using KGySoft.Drawing.ImagingTools.ViewModel;
@@ -76,10 +77,10 @@ namespace KGySoft.Drawing.DebuggerVisualizers.Package
                 {
                     imagingToolsViewModel?.Dispose();
                     imagingToolsViewModel = ViewModelFactory.CreateDefault();
-                    imagingToolsView = ViewFactory.CreateView(imagingToolsViewModel);
+                    imagingToolsView = CreateViewInNewThread(imagingToolsViewModel);
                 }
-
-                imagingToolsView.Show();
+                else
+                    imagingToolsView.Show();
             }
             catch (Exception ex)
             {
@@ -88,6 +89,33 @@ namespace KGySoft.Drawing.DebuggerVisualizers.Package
                 imagingToolsView = null;
                 ShellDialogs.Error(serviceProvider!, Res.ErrorMessageUnexpectedError(ex.Message));
             }
+        }
+
+        private static IView CreateViewInNewThread(IViewModel viewModel)
+        {
+            IView? result = null;
+            using var created = new ManualResetEvent(false);
+
+            // Creating a non-background STA thread for the view so the possible lagging of VisualStudio will not affect its performance
+            var t = new Thread(() =>
+            {
+                result = ViewFactory.CreateView(viewModel);
+                
+                // ReSharper disable once AccessToDisposedClosure - disposed only after awaited
+                created.Set();
+
+                // Now the view is shown as a dialog and this thread is kept alive until it is closed.
+                // The caller method returns once the view is created and the result is also stored and can
+                // be re-used until closing the view and thus exiting the thread.
+                result.ShowDialog();
+                result.Dispose();
+            });
+
+            t.SetApartmentState(ApartmentState.STA);
+            t.IsBackground = false;
+            t.Start();
+            created.WaitOne();
+            return result!;
         }
 
         #endregion
